--- a/stretch-assignment/index.html
+++ b/stretch-assignment/index.html
@@ -3,8 +3,10 @@
   <head>
     <title>DOM II</title>
     <link rel="stylesheet" href="./styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
   </head>
   <body>
+
     <script defer="defer" src="./index.js"></script>
 
     <div class="blocks">
